--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,8 +30,12 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "@types/supertest": "^2.0.12",
     "express": "^4.18.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.1",
     "tslint": "^6.1.3"
   }
 }
