--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
