--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "nodemon main.ts",
+    "start": "node .",
     "test": "jest --config"
   },
   "repository": {
