--- a/package.json
+++ b/package.json
@@ -23,17 +23,30 @@
   "homepage": "https://github.com/Project-SAP/project-sap-backend#readme",
   "dependencies": {
     "@decorators/express": "^2.6.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.18",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "express": "^4.18.1",
     "supertest": "^6.2.4",
