tweaked error handling and fixed async processing

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
         "esbenp.prettier-vscode",
         "msjsdiag.vscode-react-native",
         "gruntfuggly.todo-tree",
-        "ms-vscode.vscode-typescript-next"
+        "ms-vscode.vscode-typescript-next",
+        "eamodio.gitlens"
     ]
 }
