--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-winston": "^4.2.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.9.3",
     "mongoose": "^6.6.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
