--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.5.3",
     "typescript": "^4.8.3",
     "winston": "^3.8.2"
   },
